--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
         </ul>
       </div>
     </main>
-    <script src="index.js"> </script>
+    <script defer src="index.js"> </script>
   </body>
 </html>
