--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
         <p class="mensagem-lista-vazia">Não há nenhum item na lista no momento</p>
       </div>
     </main>
-    <script defer src="index.js"> </script>
+    <script src="index.js" type="module"> </script>
   </body>
 </html>
